--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ h2 {
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
- letter-spacing: .5px;
+ letter-spacing: .75px;
   margin-top: 5px;
    margin-bottom: 0px;
 }
@@ -33,11 +33,6 @@ p {
   font-weight: 500;
 }
 
-img {
-  max-width: 120px;
-  margin-top: 10px;
-  margin-bottom: 5px;
-}
 
 a {
   text-decoration: none;
@@ -47,4 +42,60 @@ a {
 #line {
   border-bottom: .5px solid #797879;
   max-width: 75px;
+}
+
+/** version 1 **/
+
+#v1 .logo{
+  max-width: 120px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+
+/** version 2 **/
+
+#v2 .logo{
+  max-width: 155px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+#divider {
+  border-style: solid;
+  border-width: .5px;
+  border-color: #dedede;
+  margin-top: 20px;
+  width: 150px;
+}
+
+#v2 h2 {
+  padding-bottom: 10px;
+}
+
+/** version 3 **/
+
+#v3 .logo {
+  padding-left: 10px;
+  max-width: 135px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  padding-right: 15px;
+  border-right: solid .65px #018aa2;
+}
+
+#v3 h2 {
+  padding-bottom: 10px;
+}
+
+.social-table {
+  width: 300px;
+  background-color: #144852;
+  margin-top: 15px;
+}
+
+.social {
+  max-width: 20px;
+  padding: 5px 5px 5px 15px;
+  margin-bottom: 11px;
 }
