--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
- color: #01a0bc;
+ color: #018aa2;
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 0px;
@@ -29,7 +29,7 @@ p {
 }
 
 .identifier {
- color: #01a0bc;
+ color: #018aa2;
   font-weight: 500;
 }
 
