--- a/css/main.css
+++ b/css/main.css
@@ -4,14 +4,14 @@ body {
 
 h1 {
  color: #018aa2;
- font-size: 14px;
+ font-size: 16px;
  font-weight: 500;
  margin-bottom: 0px;
 }
 
 h2 {
  color: #797879;
- font-size: 10px;
+ font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: .75px;
@@ -21,7 +21,8 @@ h2 {
 
 p {
  color: #797879;
- font-size: 10px;
+ font-size: 11px;
+ padding-bottom: 2px;
  margin-top: 0px;
  margin-bottom: 0px;
   font-weight: 400;
@@ -47,16 +48,17 @@ a {
 /** version 1 **/
 
 #v1 .logo{
-  max-width: 120px;
-  margin-top: 10px;
-  margin-bottom: 5px;
+  max-width: 150px;
+  margin-top: 15px;
+  margin-bottom: 10px;
 }
 
 
 /** version 2 **/
 
 #v2 .logo{
-  max-width: 155px;
+  max-width: 190px;
+  margin-left:-5px;
   margin-top: 10px;
   margin-bottom: 5px;
 }
@@ -66,7 +68,7 @@ a {
   border-width: .5px;
   border-color: #dedede;
   margin-top: 20px;
-  width: 150px;
+  width: 175px;
 }
 
 #v2 h2 {
