--- a/css/main.css
+++ b/css/main.css
@@ -4,14 +4,14 @@ body {
 
 h1 {
  color: #018aa2;
- font-size: 16px;
+ font-size: 14px;
  font-weight: 500;
  margin-bottom: 0px;
 }
 
 h2 {
  color: #797879;
- font-size: 11px;
+ font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: .75px;
@@ -21,12 +21,12 @@ h2 {
 
 p {
  color: #797879;
- font-size: 11px;
+ font-size: 10px;
  padding-bottom: 2px;
  margin-top: 0px;
  margin-bottom: 0px;
   font-weight: 400;
-   letter-spacing: .25px;
+   letter-spacing: .5px;
 }
 
 .identifier {
@@ -48,7 +48,8 @@ a {
 /** version 1 **/
 
 #v1 .logo{
-  max-width: 150px;
+  max-width: 140px;
+    margin-left:-5px;
   margin-top: 15px;
   margin-bottom: 10px;
 }
@@ -57,7 +58,7 @@ a {
 /** version 2 **/
 
 #v2 .logo{
-  max-width: 190px;
+  max-width: 175px;
   margin-left:-5px;
   margin-top: 10px;
   margin-bottom: 5px;
@@ -68,7 +69,7 @@ a {
   border-width: .5px;
   border-color: #dedede;
   margin-top: 20px;
-  width: 175px;
+  width: 160px;
 }
 
 #v2 h2 {
@@ -79,7 +80,7 @@ a {
 
 #v3 .logo {
   padding-left: 10px;
-  max-width: 160px;
+  max-width: 150px;
   margin-top: 10px;
   margin-bottom: 5px;
   padding-right: 20px;
@@ -91,9 +92,11 @@ a {
 }
 
 .social-table {
-  width: 350px;
+  width: 320px;
   background-color: #144852;
   margin-top: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .social-icons {
@@ -102,6 +105,6 @@ a {
 
 .social {
   max-width: 25px;
-  padding-right: 15px;
+  padding-right: 10px;
   margin-bottom: 15px;
 }
