--- a/css/main.css
+++ b/css/main.css
@@ -15,8 +15,9 @@ h2 {
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: .75px;
-  margin-top: 5px;
-   margin-bottom: 0px;
+ margin-top: 5px;
+ margin-bottom: 0px;
+ padding-bottom: 10px;
 }
 
 p {
@@ -29,39 +30,18 @@ p {
    letter-spacing: .5px;
 }
 
-.identifier {
- color: #018aa2;
-  font-weight: 500;
-}
-
-
 a {
   text-decoration: none;
   color: #444445;
 }
 
-#line {
-  border-bottom: .5px solid #444445;
-  max-width: 75px;
+.identifier {
+ color: #018aa2;
+  font-weight: 500;
 }
 
-/** version 2 **/
-
-#v2 .logo{
+.logo{
   max-width: 162px;
   margin-left:-5px;
   margin-bottom: 5px;
-  padding-left: 5px;
-}
-
-#divider {
-  border-style: solid;
-  border-width: .5px;
-  border-color: #dedede;
-  margin-top: 20px;
-  width: 165px;
-}
-
-#v2 h2 {
-  padding-bottom: 10px;
 }
