--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,23 @@
+@@font-face {
+  font-family: effra;
+  src: url(Effra_Rg.ttf);
+}
+
 body {
-  font-family: 'effra', sans-serif;
+  font-family: 'effra', 'verdana', sans-serif;
 }
 
 h1 {
  color: #018aa2;
  font-size: 14px;
- font-weight: 500;
+ font-weight: 600;
  margin-bottom: 0px;
 }
 
 h2 {
  color: #444445;
  font-size: 10px;
- font-weight: 500;
+ font-weight: 600;
  text-transform: uppercase;
  letter-spacing: .75px;
  margin-top: 5px;
