--- a/css/main.css
+++ b/css/main.css
@@ -16,9 +16,8 @@ h2 {
  font-size: 10px;
  font-weight: 600;
  text-transform: uppercase;
- letter-spacing: .75px;
- margin-top: 5px;
- margin-bottom: 0px;
+ letter-spacing: .65px;
+margin-top: 5px;
  padding-bottom: 10px;
 }
 
@@ -33,17 +32,16 @@ p {
 }
 
 a {
-  text-decoration: none;
-  color: #444445;
+  text-decoration: none !important;
+  color: #444445 !important;
 }
 
 .identifier {
  color: #018aa2;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .logo{
   max-width: 162px;
   margin-left:-5px;
-  margin-bottom: 5px;
 }
